[package]
name = "voxel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
ash = { version = "0.38.0", features = ["linked", "debug"] }
ash-window = "0.13.0"
env_logger = "0.11.2"
log = "0.4.21"
winit = { version = "0.29.0", features = ["rwh_06"] }
